0.9.6
- Fixed non-ASCII character handling (thanks, Roman!)
- Fully removed C-based socket code

0.9.5
- Removed package date (Thanks, Dimitar)
- Added sys. schema name to internal queries, so SET SCHEMA xx would not break things (Thanks again, Dimitar)
- Fixed monetdb:// URL handling on newer R versions (Thanks, Alex)
- DBI 0.3 compatibility (isValid etc.)
- deprecated dbTransaction() (DBI has standardized dbBegin())
- Back to R socket code for peace of mind
- Code cleanup
- dplyr integration moved to MonetDB.R package

0.9.4
- dbWriteTable overhaul (thanks, Anthony)
- Fix for dbListTables for MonetDB versions after Jan2014

0.9.3
- Remove trailing slashes for monetdb.program.path parameter for monetdb.server.setup (Thanks, Anthony!)
- fixed monetdbd.liststatus (Thanks, Bart)

0.9.2
- monetdb_queryinfo method to find out things about an arbitrary query cheaply
- new options monetdb.sequential, monetdb.debug.query and monetdb.debug.mapi
- debug output now uses the message() function
- source code cleanup
- dbListTables() now hides system tables per default, also got options to include the
  schema name and quoting in the result (sys_tables, schema_names and quote)
- fixed various TODO's in the code to get closer to 1.0 (exciting)
- fixed a bug when the error identifier sent by MonetDB was non-numeric
- IPv6 addresses in dbConnect() should now work (another long-standing TODO)

0.9.1
- dbGetInfo() now supported on MonetDBConnection (dplyr compatibility)
- dbTransaction(), dbCommit() and dbRollback() support
- fixed leaking of socket variable in dbConnect()
- fixed monetdb.server.setup for UNIX-like systems (Thanks, Enzo)
- fixed issue in dbClearResult() which produced a protocol error

0.9
- various extensions to monetdb.read.csv
- removed monet.frame from this package, moved to github

0.8.5
- added parameters newline and quote to monetdb.write.csv

0.8.4
- fixed bug when reading empty table (Thanks, Anthony)