@@ -28,4 +28,6 @@ export(db_insert_into.MonetDBConnection)
 export(db_create_index.MonetDBConnection)
 export(db_analyze.MonetDBConnection)
 export(sql_subquery.MonetDBConnection)
-export(monetdb_queryinfo)
+export(monetdb_queryinfo) 
+export(sample_n.tbl_monetdb)
+export(sample_frac.tbl_monetdb)
